@@ -80,6 +80,16 @@ interface SubjectManager
    typedef sequence<SubjectMgrInfoItem> SubjectManagerInfoList;
 
    /**
+    * Returns whether this Subject Manager contains the named subject.
+    *
+    * @param name The name of the subject to search for in this Subject
+    *             Manager's collection of subjects.
+    *
+    * @since 1.1.2
+    */
+   boolean hasSubject(in string name);
+
+   /**
     * Returns the named Tweek Subject reference to the caller if the Subject
     * is registered.  If not, a reference equal to CORBA::nil() is returned.
     *
