@@ -1,5 +1,7 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2005-11-12 patrickh    Added tweek::SubjectManagerImpl::hasSubject().
+                       NEW VERSION: 1.1.2
 2005-06-09 patrickh    Updated to support Windows 64-bit edition.
                        NEW VERSION: 1.1.1
 2005-06-07 patrickh    VR Juggler 2.0 branch created.
